movies database API

--- a/.env.example
+++ b/.env.example
@@ -46,4 +46,4 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 TMDB_KEY=
-TMDB_ACCESS_TOKEN=
+TMDB_TOKEN=
